work on swagger doc
